# OS_MAI

cp/: .gitignore
cp/src/: CMakeLists.txt  jobs.cpp  jobs.h  main.cpp  node.h  parser.cpp  parser.h
cp/src/dags/: dag.xml  dagErr.xml
lab1/: CMakeLists.txt  Makefile  output  readme.md
lab1/include/: functions.h
lab1/src/: child.c  functions.c  parent.c
